[Backend] Improve/Fix run caches
- recentRunCache is now an ArrayList instead of a LinkedList because the list must sorted after each
modify anyway
- recentRunCache is now properly synchronized so that it's thread safe
- sort recentRunCache when inserting a new run (since the new run does not necessarily have to be the most recent)
- properly invalidate caches when deleteAllMeasurementsOfName() is called