@@ -1,5 +1,6 @@
 package de.aaaaaaah.velcom.backend.newaccess;
 
+import static java.util.stream.Collectors.toList;
 import static org.jooq.codegen.db.Tables.RUN_MEASUREMENT_VALUE;
 import static org.jooq.codegen.db.tables.Run.RUN;
 import static org.jooq.codegen.db.tables.RunMeasurement.RUN_MEASUREMENT;
@@ -15,7 +16,9 @@ import de.aaaaaaah.velcom.backend.newaccess.entities.RepoId;
 import de.aaaaaaah.velcom.backend.newaccess.entities.Run;
 import de.aaaaaaah.velcom.backend.storage.db.DatabaseStorage;
 import java.sql.Timestamp;
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.List;
 import java.util.UUID;
 import org.jooq.DSLContext;
 import org.jooq.codegen.db.tables.records.RunMeasurementRecord;
@@ -90,9 +93,16 @@ public class BenchmarkWriteAccess extends BenchmarkReadAccess {
 			}
 
 			// 3.) Insert run into cache
-			recentRunCache.addFirst(run);
-			while (recentRunCache.size() > RECENT_RUN_CACHE_SIZE) {
-				recentRunCache.removeLast();
+			synchronized (recentRunCache) {
+				recentRunCache.add(run);
+
+				// Need to sort again because this run may have been started before
+				// the most recent run that is already in the cache
+				recentRunCache.sort(recentRunCacheOrder);
+
+				while (recentRunCache.size() > RECENT_RUN_CACHE_SIZE) {
+					recentRunCache.remove(recentRunCache.size() - 1);
+				}
 			}
 
 			final Cache<CommitHash, Run> cache = runCache.computeIfAbsent(run.getRepoId(),
@@ -112,6 +122,7 @@ public class BenchmarkWriteAccess extends BenchmarkReadAccess {
 	 * @param measurementName the name specifying which measurements to delete.
 	 */
 	public void deleteAllMeasurementsOfName(RepoId repoId, MeasurementName measurementName) {
+		// Update database
 		try (DSLContext db = databaseStorage.acquireContext()) {
 			db.deleteFrom(RUN_MEASUREMENT)
 				.where(
@@ -125,6 +136,38 @@ public class BenchmarkWriteAccess extends BenchmarkReadAccess {
 						.and(RUN_MEASUREMENT.METRIC.eq(measurementName.getMetric()))
 				)
 				.execute();
+		}
+
+		// Repopulate recent run cache
+		synchronized (recentRunCache) {
+			recentRunCache.clear();
+			recentRunCache.addAll(getRecentRuns(0, RECENT_RUN_CACHE_SIZE));
+			recentRunCache.sort(recentRunCacheOrder);
+		}
+
+		// Update repo run cache
+		Cache<CommitHash, Run> repoRunCache = runCache.computeIfAbsent(repoId,
+			i -> RUN_CACHE_BUILDER.build());
+
+		List<CommitHash> copiedKeys = new ArrayList<>(repoRunCache.asMap().keySet());
+
+		for (CommitHash copiedKey : copiedKeys) {
+			Run run = repoRunCache.getIfPresent(copiedKey);
+			if (run == null || run.getMeasurements().isEmpty()) {
+				continue;
+			} // Skip!
+			Collection<Measurement> measurements = run.getMeasurements().get();
+
+			// Check if target measurement name is one of the measurements
+			List<MeasurementName> mNames = measurements.stream()
+				.map(Measurement::getMeasurementName)
+				.collect(toList());
+
+			if (!mNames.contains(measurementName)) {
+				continue;
+			}
+			// This run contains the deleted measurement => need to invalidate run instance in cache
+			repoRunCache.invalidate(run.getCommitHash());
 		}
 	}
 
